k8s/coma/apps/feishin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feishin
  namespace: feishin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "feishin.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: feishin
                port:
                  number: 9180
  tls:
    - hosts:
        - "feishin.artichoke.cc"
      secretName: artichokecc-cert
